[gd_scene load_steps=3 format=3 uid="uid://cp75ohkn84enx"]

[ext_resource type="Script" uid="uid://b5dg7ga1slydp" path="res://scripts/MainMenu.gd" id="1_yqorp"]
[ext_resource type="FontFile" uid="uid://cco2btic4b2eq" path="res://assets/fonts/LoRes 22 OT Serif Bold.otf" id="2_0ykhv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "Game Title"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SaveSlot1Container" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SaveSlot1" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/SaveSlot1Container"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot"

[node name="SaveSlot2Container" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SaveSlot2" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/SaveSlot2Container"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot"

[node name="SaveSlot3Container" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SaveSlot3" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/SaveSlot3Container"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Empty Slot"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Quit"
